update swagger.json, add get 1 booking route
